--- a/discovery.properties
+++ b/discovery.properties
@@ -5,4 +5,4 @@ eureka.instance.hostname=localhost
  
 eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+#eureka.client.fetch-registry=false
