--- a/discovery.properties
+++ b/discovery.properties
@@ -4,5 +4,5 @@ server.port=8082
 eureka.instance.hostname=localhost
  
 eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
-eureka.client.register-with-eureka=false
+#eureka.client.register-with-eureka=false
 #eureka.client.fetch-registry=false
