--- a/discovery.properties
+++ b/discovery.properties
@@ -7,8 +7,8 @@ eureka.instance.hostname=localhost
 #eureka.client.register-with-eureka=false
 #eureka.client.fetch-registry=false
 
-#spring.redis.host=localhost 
-#spring.redis.port=6379
+spring.redis.host=localhost 
+spring.redis.port=6379
 
 eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@localhost:8082/eureka/
 eureka.client.register-with-eureka=false
