--- a/gateway.properties
+++ b/gateway.properties
@@ -13,7 +13,7 @@ zuul.routes.rating-service.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.rating-service.execution.isolation.thread.timeoutInMilliseconds=600000
  
 zuul.routes.discovery.path=/discovery/**
-zuul.routes.discovery.sensitive-headers=Set-Cookie,,Authorization
+zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.discovery.url=http://localhost:8082
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
 
