--- a/book-service.properties
+++ b/book-service.properties
@@ -1,7 +1,7 @@
 spring.application.name=book-service
 server.port=8083
  
-eureka.client.region = default
+#eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
 eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 
