--- a/discovery.properties
+++ b/discovery.properties
@@ -1,7 +1,7 @@
 spring.application.name=discovery
 server.port=8082
  
-#eureka.instance.hostname=localhost
+eureka.instance.hostname=localhost
  
 #eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 eureka.client.register-with-eureka=false
