--- a/gateway.properties
+++ b/gateway.properties
@@ -6,11 +6,11 @@ eureka.client.registryFetchIntervalSeconds = 5
 
 zuul.ignored-services=*
 
-zuul.routes.gallery-service.path=/book-service-prueba/**
-zuul.routes.gallery-service.service-id=book-service
+zuul.routes.discovery.path=/book-service-prueba/**
+zuul.routes.discovery.service-id=book-service
 
-zuul.routes.gallery-service.path=/rating-service-prueba/**
-zuul.routes.gallery-service.service-id=rating-service
+zuul.routes.discovery.path=/rating-service-prueba/**
+zuul.routes.discovery.service-id=rating-service
 
 #zuul.routes.book-service.path=/book-service/**
 #zuul.routes.book-service.sensitive-headers=Set-Cookie,Authorization
