--- a/gateway.properties
+++ b/gateway.properties
@@ -20,7 +20,7 @@ hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=60000
 
 # Map path to auth service
 zuul.routes.auth-service.path=/auth/**
-zuul.routes.auth-service.service-id=AUTH-SERVICE
+zuul.routes.auth-service.service-id=auth-service
 
 # By default, all requests to gallery service for example will start with: "/gallery/"
 # What will be sent to the gallery service is what comes after the path defined, 
