--- a/book-service.properties
+++ b/book-service.properties
@@ -5,5 +5,5 @@ eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
 eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 
-#spring.redis.host=localhost 
-#spring.redis.port=6379
+spring.redis.host=localhost 
+spring.redis.port=6379
