--- a/discovery.properties
+++ b/discovery.properties
@@ -11,5 +11,5 @@ eureka.client.fetch-registry=false
 #eureka.client.register-with-eureka=false
 #eureka.client.fetch-registry=false
 
-#spring.redis.host=localhost 
-#spring.redis.port=6379
+spring.redis.host=localhost 
+spring.redis.port=6379
