--- a/discovery.properties
+++ b/discovery.properties
@@ -7,9 +7,9 @@ server.port=8082
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-#eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@localhost:8082/eureka/
-#eureka.client.register-with-eureka=false
-#eureka.client.fetch-registry=false
+eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@localhost:8082/eureka/
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 
 spring.redis.host=localhost 
 spring.redis.port=6379
