--- a/gateway.properties
+++ b/gateway.properties
@@ -3,30 +3,21 @@ server.port=8080
  
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+
+management.security.sessions=always
  
 zuul.routes.book-service.path=/book-service/**
 zuul.routes.book-service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.book-service.execution.isolation.thread.timeoutInMilliseconds=600000
+hystrix.command.book-service.execution.isolation.thread
+    .timeoutInMilliseconds=600000
  
 zuul.routes.rating-service.path=/rating-service/**
 zuul.routes.rating-service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.rating-service.execution.isolation.thread.timeoutInMilliseconds=600000
+hystrix.command.rating-service.execution.isolation.thread
+    .timeoutInMilliseconds=600000
  
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.discovery.url=http://localhost:8082
-hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
-
-# Map path to auth service
-zuul.routes.auth-service.path=/auth/**
-zuul.routes.auth-service.service-id=auth-service
-
-# By default, all requests to gallery service for example will start with: "/gallery/"
-# What will be sent to the gallery service is what comes after the path defined, 
-# So, if request is "/gallery/view/1", gallery service will get "/view/1".
-# In case of auth, we need to pass the "/auth/" in the path to auth service. So, set strip-prefix to false
-zuul.routes.auth-service.strip-prefix=false
-
-# Exclude authorization from sensitive headers
-zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
+hystrix.command.discovery.execution.isolation.thread
+    .timeoutInMilliseconds=600000
